Fix small screen navbar stretching

--- a/scss/parts/_small.scss
+++ b/scss/parts/_small.scss
@@ -25,7 +25,7 @@
 
     li {
       float: left;
-      width: 25%;
+      width: 33%;
     }
 
     .text {
